fix: scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,31 @@ html {
   scroll-behavior: smooth;
 }
 
+html::-webkit-scrollbar {
+  width: 8px;
+}
+
+html::-webkit-scrollbar-track {
+  background: var(--bg-dark);
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: var(--accent-purple);
+  border-radius: 10px;
+  border: 2px solid var(--bg-dark);
+}
+
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: var(--text-accent);
+}
+
+html {
+  scrollbar-color: var(--accent-purple) var(--bg-dark);
+  scrollbar-width: thin;
+}
+
 img, picture, video, canvas, svg {
   display: block;
   max-width: 100%;
